added start and pause functionality to Timer class

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,9 @@
     <title>POMO</title>
 </head>
 <body>
-    <div>hello</div>
+    <div>
+        <span id="time-display">not started</span>
+        <button id="control-button">start/stop</button>
+    </div>
 </body>
 </html>
